Issue #38: Better readability for solution texts
Change hint text from red to light blue to differentiate from guess

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
 
 .hint-result {
   font-size: 20px;
-  color: red;
+  color: lightskyblue;
 }
 
 .incorrect-guess {
